# sqdstack

./: .gitignore  .travis.yml  conanfile.py  meson.build  readme.md
.ci/: build.py  install.py  test.py
lib/: meson.build  stack.c  stack.h
test/: meson.build  test.c  test_runner.c
